# paper.rs

./: .prettierignore  README.md  package-lock.json  package.json  prettier.config.js  tailwind.config.js  tsconfig.json
client/: Cargo.toml
client/src/: lib.rs  team_color.rs
client/src/components/: character_controller.rs  game.rs  line.rs  mod.rs  name.rs  player.rs  team.rs
client/src/utils/: mesh_to_vert.rs  mod.rs  rotate_vec.rs  unwrap_abort.rs
client/src/utils/geo/: close_polygon.rs  extend_poly_line.rs  find_closest_point.rs  has_self_intersection.rs  inside_polygon.rs  intersects.rs  mod.rs  triangulate.rs
src/app/: layout.tsx  page.tsx
src/client/: client.d.ts  client.js  client_bg.wasm.d.ts  package.json
src/components/: Client.tsx  ClientWasm.tsx  ClientWasmContext.tsx
src/hooks/: useMountEffectOnce.ts
