[package]
name = "client"
version = "0.1.0"
authors = ["elijah629"]
edition = "2021"
description = "Client for cp1o"
repository = "elijah629/cp1o"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
itertools = "0.11.0"
earcutr = "0.4.2"
bevy_matchbox = { version = "0.7.0", features = ["ggrs"] }
ggrs = "0.9.4"
bevy_ggrs = "0.13.0"
web-sys = { version = "0.3.64", features = ["Window"] }

[dependencies.bevy]
version = "0.11.0"
default-features = false
features = [
  "bevy_animation",
  "bevy_asset",
  "bevy_audio",
  "bevy_core_pipeline",
  "bevy_gilrs",
  # "bevy_gizmos",
  "bevy_pbr",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "default_font",
  "filesystem_watcher",
  "multi-threaded",
  "webgl2",
  "x11"
]

# [profile.release]
# opt-level = 'z'     # Optimize for size
# lto = true          # Enable link-time optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations
# panic = 'abort'     # Abort on panic
# strip = true        # Strip symbols from binary
